--- a/tasks/install_flatpak.yml
+++ b/tasks/install_flatpak.yml
@@ -5,7 +5,7 @@
     name: flatpak
     state: present
 
-- name: Install xdg-desktop-portal packages
+- name: Install xdg-desktop-portal package
   become: true
   ansible.builtin.apt:
     name: xdg-desktop-portal
