--- a/tasks/install_lutris.yml
+++ b/tasks/install_lutris.yml
@@ -15,6 +15,12 @@
     deb: /tmp/lutris_0.5.16_all.deb
     state: present
 
+- name: Install python3-protobuf package for Battle.net source
+  become: true
+  ansible.builtin.apt:
+    name: python3-protobuf
+    state: present
+
 # - name: Remove lutris deb package
 #   become: true
 #   ansible.builtin.file:
